fix: partners card overflowing

--- a/src/components/ParceirosCard/ParceirosCard.module.css
+++ b/src/components/ParceirosCard/ParceirosCard.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   gap: 4.5rem;
-  padding: 1rem;
 }
 
 .parceirosCard::-webkit-scrollbar {
@@ -21,7 +20,7 @@
   transition: 0.3s ease;
   border-radius: 0.3rem;
   filter: grayscale(1);
-  /* mix-blend-mode: darken; */
+  user-select: none;
 }
 .parceirosCard a:hover {
   transform: translateY(-4px);
