--- a/src/pages/Partners/Partners.module.css
+++ b/src/pages/Partners/Partners.module.css
@@ -12,7 +12,7 @@
 
 .partners_card_container::-webkit-scrollbar {
   height: 6px;
-  background-color: #f6f7f8;
+  background-color: transparent;
   border-radius: 0.9rem;
 }
 
